# KuoHuBit

./: .gitignore  .pdm-python  README.md  SECURITY.md  autorun_ubuntu.sh  botapi.py  botfunc.py  cache_var.py  config.yaml  depen.py  dynamic_config.yaml  jieba_words.txt  main.py  nohup.out  pyproject.toml  tes.py  update.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_1.yaml  ISSUE_TEMPLATE_2.yaml  ISSUE_TEMPLATE_3.yaml  ISSUE_TEMPLATE_4.md  config.yml
.github/workflows/: pylint.yml
docs/: package.json  pnpm-lock.yaml
docs/src/: README.md
docs/src/.vuepress/: config.ts  theme.ts
docs/src/.vuepress/navbar/: zh.ts
docs/src/.vuepress/sidebar/: zh.ts
docs/src/code/: README.md  sw_algorithm.md
docs/src/demo/: README.md  black.md  block_repeat.md  bread.md  echo.md  fish.md  image_safe.md  inm.md  manage.md  op.md  saucenao.md  sensitive_words.md  sese.md  six.md  vote.md  wood_fish.md
docs/src/guide/: README.md  step1.md  step2.md  step3.md
docs/src/question/: QA.md  README.md  gfw.md  how-to-search.md  search-engines.md  vpn.md
modules/: 114514.py  _chatgpt.py  _echo.py  _imgsafe.py  admin.py  blacklist.py  botself.py  bread.py  bread_cht.py  chatgpt.py  echo.py  event.py  fish.py  fish_cht.py  gpt.py  helloworld.py  image_review.py  jm.py  manage.py  menu.py  nudge.py  prohibit_repeat.py  prohibit_repeat_cht.py  repeat.py  rulai.py  saucenao.py  sensitive_words.py  setu.py  setu_cht.py  vote.py  wooden_fish.py  wooden_fish_cht.py
modules/NO_USE/: 6.py  rulai.py  top5_keyword.py  wooden_fish.py  wooden_fish_cht.py
modules/NO_USE/vote/: __init__.py
modules/NO_USE/vote/utils/: __init__.py  answer.py
modules/NO_USE/vote/utils/statistics/: stv.py
modules/NO_USE/zh_cht/: 6_cht.py  blacklist_cht.py  fish_cht.py  prohibit_repeat_cht.py  setu_cht.py
modules/currency/: 6.py  admin.py  botself.py  echo.py  event.py  saucenao.py
modules/other_world/: timer.py
modules/vote/: __init__.py  vote.py
modules/vote/utils/: answer.py  problem.py
modules/vote/utils/statistics/: pvs.py
modules/zh_cht/: 6_cht.py  blacklist.py  blacklist_cht.py  bread_cht.py  fish_cht.py  prohibit_repeat_cht.py  sensitive_words.py  setu_cht.py  wooden_fish_cht.py
modules/zh_cn/: 114514.py  6.py  admin.py  blacklist.py  botself.py  bread.py  echo.py  event.py  fish.py  image_review.py  manage.py  prohibit_repeat.py  saucenao.py  sensitive_words.py  setu.py  top5_keyword.py  wooden_fish.py
utils/: cache.py  config.py  data.py  depen.py  error.py  file.py  sql.py  var.py
