[tool.poetry]
name = "bugbot"
version = "0.1.0"
description = "A QQ Bot"
authors = ["HanTools233 <hantools@foxmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graia-ariadne = {extras = ["standard"], version = "^0.10.2"}
pyyaml = "^6.0"
requests-cache = "^0.9.7"
redis = "^4.4.0"
pymysql = "^1.0.2"
cryptography = "^38.0.4"
requests = "^2.28.1"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
openai = "^0.25.0"
aiomysql = "^0.1.1"
opencc-python-reimplemented = "^0.1.6"
jieba = "^0.42.1"
numba = "^0.56.4"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"



[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "bugbot"
version = "0.1.0"
description = "A QQ Bot"
authors = [
    {name = "HanTools233", email = "y066ydg5@duck.com"},
    {name = "HanTools233",email = "hantools@foxmail.com"},
]
dependencies = ["graia-ariadne[standard]<1.0.0,>=0.10.2", "pyyaml<7.0,>=6.0", "requests-cache<1.0.0,>=0.9.7", "redis<5.0.0,>=4.4.0", "pymysql<2.0.0,>=1.0.2", "cryptography<39.0.0,>=38.0.4", "requests<3.0.0,>=2.28.1", "aiohttp[speedups]<4.0.0,>=3.8.3", "openai<1.0.0,>=0.25.0", "aiomysql<1.0.0,>=0.1.1", "opencc-python-reimplemented<1.0.0,>=0.1.6", "jieba<1.0.0,>=0.42.1", "numba<1.0.0,>=0.56.4", "uvicorn<1.0.0,>=0.20.0", "fastapi<1.0.0,>=0.92.0"]
requires-python = ">=3.10,<4.0"
license = {text = "AGPL-3.0"}
readme = "README.md"

[project.urls]
