[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "KuoHuBit"
version = "114514.1919810"
description = "A QQ Bot"
authors = [
    { name = "HanTools233", email = "y066ydg5@duck.com" },
    { name = "HanTools233", email = "hantools@foxmail.com" },
]
dependencies = [
    "graia-ariadne[standard]<1.0.0,>=0.10.2",
    "pyyaml<7.0,>=6.0",
    "requests-cache<1.0.0,>=0.9.7",
    "redis<5.0.0,>=4.4.0",
    "pymysql<2.0.0,>=1.0.2",
    "cryptography<39.0.0,>=38.0.4",
    "requests<3.0.0,>=2.28.1",
    "aiohttp[speedups]<4.0.0,>=3.8.3",
    "openai<1.0.0,>=0.25.0",
    "aiomysql<1.0.0,>=0.1.1",
    "opencc-python-reimplemented<1.0.0,>=0.1.6",
    "jieba<1.0.0,>=0.42.1",
    "ntplib>=0.4.0",
    "portalocker>=2.7.0",
    "numpy>=1.24.2",
    "uvicorn>=0.21.1",
    "fastapi>=0.95.1",
]
requires-python = ">=3.10,<4.0"
license = { text = "AGPL-3.0" }
readme = "README.md"

[project.urls]
